// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/sbt/extract extractPackageFile() extract deps from native scala file with variables 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.7.1",
      "datasource": "sbt-plugin",
      "depName": "com.example:foo_2.13.0-RC5",
      "fileReplacePosition": 168,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    Object {
      "currentValue": "1.2.3",
      "datasource": "sbt-plugin",
      "depName": "com.abc:abc",
      "fileReplacePosition": 120,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
}
`;

exports[`lib/manager/sbt/extract extractPackageFile() extracts deps for generic use-cases 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.0.1",
      "datasource": "sbt-plugin",
      "depName": "org.example:foo",
      "fileReplacePosition": 132,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt-plugin",
      "depName": "org.example:bar_2.9.10",
      "fileReplacePosition": 188,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.3",
      "datasource": "sbt-plugin",
      "depName": "org.example:baz_2.9.10",
      "fileReplacePosition": 252,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.4",
      "datasource": "sbt-plugin",
      "depName": "org.example:qux",
      "fileReplacePosition": 287,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.5",
      "datasource": "sbt-plugin",
      "depName": "org.example:quux",
      "fileReplacePosition": 346,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.6",
      "datasource": "sbt-plugin",
      "depName": "org.example:quuz_2.9.10",
      "depType": "test",
      "fileReplacePosition": 526,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.7",
      "datasource": "sbt-plugin",
      "depName": "org.example:corge",
      "depType": "Provided",
      "fileReplacePosition": 584,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.8",
      "datasource": "sbt-plugin",
      "depName": "org.example:grault",
      "depType": "Test",
      "fileReplacePosition": 479,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "fileReplacePosition": 986,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
  ],
}
`;

exports[`lib/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "0.0.1",
      "datasource": "sbt-plugin",
      "depName": "org.example:foo",
      "fileReplacePosition": 195,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.2",
      "datasource": "sbt-plugin",
      "depName": "org.example:bar_2.12",
      "fileReplacePosition": 251,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.3",
      "datasource": "sbt-plugin",
      "depName": "org.example:baz_2.12",
      "fileReplacePosition": 315,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.4",
      "datasource": "sbt-plugin",
      "depName": "org.example:qux",
      "fileReplacePosition": 350,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.5",
      "datasource": "sbt-plugin",
      "depName": "org.example:quux",
      "fileReplacePosition": 409,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.6",
      "datasource": "sbt-plugin",
      "depName": "org.example:quuz_2.12",
      "depType": "test",
      "fileReplacePosition": 553,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.7",
      "datasource": "sbt-plugin",
      "depName": "org.example:corge",
      "depType": "Provided",
      "fileReplacePosition": 611,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.8",
      "datasource": "sbt-plugin",
      "depName": "org.example:grault",
      "depType": "Test",
      "fileReplacePosition": 51,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    Object {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "fileReplacePosition": 1013,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
  ],
}
`;

exports[`lib/manager/sbt/extract extractPackageFile() skips deps when scala version is missing 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "3.0.0",
      "datasource": "sbt-plugin",
      "depName": "org.scalatest:scalatest",
      "fileReplacePosition": 65,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    Object {
      "currentValue": "1.0.11",
      "datasource": "sbt-plugin",
      "depName": "com.github.gseitz:sbt-release",
      "depType": "plugin",
      "fileReplacePosition": 100,
      "registryUrls": Array [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
}
`;
